--- a/style.css
+++ b/style.css
@@ -32,10 +32,6 @@ body {
     height: 60%;
 }
 
-/* .snsLink li:first-child {
-    border-right: 2px solid #cbcbcb;
-} */
-
 .snsItem {
     padding: .75rem;
     display: flex;
@@ -56,6 +52,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0 0.75rem;
+    margin-bottom: 0.5rem;
 }
 
 .hexLogo {
@@ -68,27 +65,263 @@ body {
     display: block;
 }
 
-.navLink {
+.navbar {
     display: flex;
     justify-content: space-between;
 }
 
-.navLink li {
+.navbar li {
     margin-left: 1rem;
 }
 
-.navLink-item {
+.navbar-item {
     color: #43cdab;
     padding: 0.5rem;
     position: relative;
 }
 
 
-.navLink-item:hover:after {
+.navbar-item:hover:after {
     position: absolute;
     content: '';
     width: 100%;
     bottom: 0;
     left: 0;
     border-bottom: 2px solid #43cdab
+}
+
+@media (max-width: 568px) {
+    .header {
+        display: block;
+    }
+
+    .hexLogo {
+        margin: auto;
+    }
+}
+
+/* banner */
+.banner-bg {
+    background-color: rgb(18, 18, 18);
+    margin-bottom: 4rem;
+}
+
+.banner {
+    background: url(./images/banner.png) no-repeat center center / cover;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.banner-title {
+    background-color: rgba(0, 0, 0, 0.2);
+    align-self: stretch;
+    font-size: 2.5rem;
+    color: #fff;
+    padding: 2.5rem 1.5rem;
+}
+
+@media (max-width: 568px) {
+    .banner {
+        background-position: 70%;
+    }
+}
+
+/* course */
+.course {
+    margin-bottom: 4rem;
+    padding: 1.5rem;
+}
+
+.cards {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.card {
+    width: 32%;
+    text-align: center;
+    padding: 1.5rem;
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 767px) {
+    .card {
+        width: 100%;
+        margin-bottom: 2.5rem;
+    }
+}
+
+.card img {
+    margin-bottom: 0.5rem;
+    height: 150px;
+    object-fit: none;
+}
+
+.card h3 {
+    font-size: 1.25rem;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
+}
+
+.card p {
+    text-align: left;
+}
+
+.card ol {
+    text-align: left;
+    list-style: disc;
+    margin-left: 1.5rem;
+}
+
+/* product */
+.color-primary {
+    color: #33b897;
+}
+
+.product {
+    text-align: center;
+}
+
+.product h3 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
+}
+
+.product table {
+    text-align: left;
+    width: 90%;
+    margin: auto;
+    margin-bottom: 4rem;
+}
+
+.product table tr {
+    line-height: 2.5;
+    border-bottom: 1px solid rgb(134, 134, 134);
+}
+
+.product table tr:hover {
+    background-color: rgb(229, 229, 229, .3);
+}
+
+.product table tr th {
+    font-weight: 700;
+    padding-left: 1rem;
+}
+
+.product table tr td {
+    width: 25%;
+    padding-left: 1rem;
+}
+
+@media (max-width: 568px) {
+    .product {
+        overflow-x: scroll;
+    }
+
+    .product table {
+        width: 700px;
+    }
+}
+
+
+.product table tr:first-child {
+    background-color: #f7f7f7;
+    border-top: 1px solid rgb(134, 134, 134);
+}
+
+/* form */
+.form-bg {
+    background-image: linear-gradient(0deg, #009872, #00644b);
+    text-align: center;
+    padding: 2.5rem 0 2rem 0;
+}
+
+.form-bg h3 {
+    color: #fff;
+    font-size: 1.5rem;
+    margin-bottom: 2.5rem;
+}
+
+.form {
+    color: #fff;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    max-width: 1000px;
+}
+
+.form textarea {
+    width: 46%;
+    height: 250px;
+    resize: none;
+    outline: none;
+}
+
+.guestInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 46%;
+}
+
+.guestInfo input {
+    width: 100%;
+    padding: 0.4rem;
+    margin-bottom: 1rem;
+    outline: none;
+}
+
+.guestInfo button {
+    margin-left: auto;
+}
+
+.guestInfo button:hover {
+    color: #00cc99;
+    background-color: #fff;
+}
+
+.btn {
+    background-color: #00cc99;
+    border: none;
+    border-radius: 0.3rem;
+    color: #fff;
+    padding: 0.5rem 1.5rem;
+    cursor: pointer;
+}
+
+@media (max-width: 568px) {
+    .form textarea {
+        width: 90%;
+        margin-bottom: 2rem;
+    }
+
+    .guestInfo {
+        width: 90%;
+    }
+}
+
+/* footer */
+.footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem;
+}
+
+.contact li a {
+    color: #e54991;
+}
+
+.contact li a:hover {
+    color: #00aaec;
+}
+
+@media (max-width: 568px) {
+    .footer>a {
+        display: none;
+    }
 }
